<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_favorite"
        android:icon="@drawable/icon_heart"
        android:title="@string/title_favorite"
        app:showAsAction="always" />

</menu>